system enhanced with caching, requestId propagation and jwt authorization